--- a/style.css
+++ b/style.css
@@ -4,10 +4,16 @@
     padding: 0;
 }
 
+/*@font-face {*/
+/*    font-family: RalewayRegular;*/
+/*    src: url("fonts/static/Raleway-Regular.ttf");*/
+/*}*/
+
 
 div .questions {
     background: #E5E5E5;
-    font-family: Raleway;
+    width: 100%;
+
 }
 
 .questions h3 {
@@ -17,6 +23,11 @@ div .questions {
     line-height: 153px;
     font-size: 130px;
     color: #F6F6F6;
+    text-transform: uppercase;
+}
+
+.questions .main__title {
+    margin-top: 5rem;
 }
 
 .questions h4 {
@@ -26,6 +37,7 @@ div .questions {
     font-size: 30px;
     line-height: 35px;
     color: #000000;
+    text-transform: uppercase;
 }
 
 .questions__content {
@@ -40,17 +52,18 @@ div .questions {
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
-    width: 400px;
-    height: 300px;
+    width: 550px;
+    height: 350px;
     position: relative;
-    top: 5rem;
-    left: 48rem;
+    top: 7rem;
+    left: 55%;
 }
 
 .questions__icons {
     position: absolute;
+    left: 17.5%;
     top: 0;
-    left: 15rem;
+    margin-top: 4rem;
 }
 
 .questions__icon {
@@ -58,48 +71,317 @@ div .questions {
     height: 70px;
     border: 1px solid #E41579;
     border-radius: 50%;
-    margin: 5rem 2rem;
+    margin: -0.8rem 1rem;
     position: relative;
+    background: white;
+    outline: none;
 }
 
-.questions__icon:after {
-    content: "\271A";
-    font-size: 20px;
+.questions__icon:hover {
+    background: linear-gradient(180deg, #E41579 0%, #FF3F84 100%);
+}
+
+.plus-element {
+    height: 33px;
+    width: 2px;
+    background: #E41579;
     position: absolute;
-    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    top: 30%;
+    /*transition: 1s;*/
 }
 
-.questions__icon h3 {
+.ver {
+    transform: rotate(90deg)
+}
+
+.active-hor {
+    transform: rotate(45deg)
+}
+
+.active-ver {
+    transform: rotate(135deg)
+}
+
+
+.questions__icon-title h3 {
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
     line-height: 19px;
     color: black;
-    position: absolute;
+    position: relative;
     left: 8rem;
+    top: -4rem;
     width: 570px;
     height: 70px;
     text-align: left;
+    text-transform: none;
+    margin-top: 2.2rem
 }
 
-.questions__icon p {
-    width: 570px;
+.questions__icon-content p {
+    width: 35vw;
     height: 130px;
-    position: absolute;
+    position: relative;
     left: 8rem;
-    top: 2rem;
+    top: -6rem;
+    margin-bottom: -6rem;
+    font-feature-settings: 'pnum' on, 'lnum' on;
 }
 
-.text {
+.questions__icon-content p:nth-child(2) {
+    top: -4rem;
+}
+
+.questions__icon-content p span {
+    color: #E41579;
+    font-weight: bold;
+}
+
+.questions__icon-content {
     display: none;
-
 }
 
-.toggle-button {
+.toggle-button, .toggle {
     cursor: pointer;
-    width: 50px;
-    height: 50px;
 }
+
+
+@media screen and (max-width: 1618px) {
+    .questions__icon-content p:nth-child(2) {
+        top: -3rem;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .questions__content .questions-background {
+        width: 450px;
+        height: 250px;
+    }
+
+    .questions .main__title {
+        font-size: 100px;
+    }
+
+    .questions__icon-content p:nth-child(2) {
+        top: -1rem;
+    }
+}
+
+@media screen and (max-width: 900px){
+    .questions__icons {
+        left: 10%;
+    }
+
+    .questions__content .questions-background {
+        width: 370px;
+        height: 200px;
+    }
+
+    .questions__icon-content p:nth-child(2) {
+        top: 0;
+    }
+
+    .questions__icon-content p {
+        height: 150px;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    .questions__content .questions-background {
+        position: relative;
+        top: -16rem;
+        left: 70%;
+        width: 190px;
+        height: 160px;
+        transform: rotate(30deg);
+    }
+
+    .questions .main__title {
+        font-size: 80px;
+        padding-top: 5rem;
+    }
+
+    .questions h4 {
+        font-size: 20px;
+        margin-top: -2rem;
+    }
+
+    .questions__icon {
+        width: 70px;
+        height: 70px;
+    }
+
+    .questions__icon-title h3 {
+        width: 650px;
+        left: 8rem;
+    }
+
+    .questions__icon-content p {
+        width: 80vw;
+        height: 130px;
+        /*margin-bottom: -11rem;*/
+        left: 8rem;
+        /*top: -5rem;*/
+        font-size: 15px;
+        padding-right: 25px;
+        margin-bottom: 0;
+    }
+
+    .questions__icons {
+        left: 0;
+    }
+
+    .questions__icon-content p:nth-child(2) {
+        margin-bottom: -16rem;
+        top: -10rem;
+    }
+
+}
+
+@media screen and (max-width: 688px) {
+    .questions__icon-content p:nth-child(2) {
+        top: -12rem;
+        margin-bottom: -18rem;
+    }
+
+    .questions__icon-content p {
+        width: 70vw;
+        height: 180px;
+    }
+
+
+}
+
+@media screen and (max-width: 600px) {
+    .questions__icon-content p:nth-child(2) {
+        top: -11rem;
+    }
+
+    .questions .main__title {
+        font-size: 60px;
+    }
+
+    .questions__content .questions-background {
+        left: 66%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .questions__icon-content p:nth-child(2) {
+        top: -12rem;
+        margin-bottom: -23rem;
+    }
+
+    .questions .main__title {
+        font-size: 40px;
+    }
+
+    .questions__icon-content p {
+        height: 220px;
+    }
+
+    .questions__content .questions-background {
+        left: 50%;
+    }
+
+}
+
+@media screen and (max-width: 450px) {
+    .questions__icon-content p:nth-child(2) {
+        top: -12rem;
+        margin-bottom: -20rem;
+    }
+
+    .questions__icon-content p {
+    font-size: 14px;
+    }
+
+    .questions__icon-content p {
+        width: 65vw;
+        left: 6.5rem;
+        margin-top: 10px;
+    }
+
+    .questions__icon-title h3 {
+        width: 70%;
+        padding-right: 10px;
+        left: 6.5rem;
+    }
+
+}
+
+
+
+
+
+@media screen and (max-width: 320px) {
+    .questions__content .questions-background {
+        position: relative;
+        top: -16rem;
+        left: 38%;
+        width: 202px;
+        height: 160px;
+        transform: rotate(90deg);
+    }
+
+    .questions .main__title {
+        font-size: 30px;
+        padding-top: 15rem;
+        line-height: 35px;
+        margin-bottom: 3rem;
+        margin-top: 0;
+    }
+
+    .questions h4 {
+        font-size: 20px;
+        margin-top: -3rem;
+    }
+
+    .questions__icon {
+        width: 60px;
+        height: 60px;
+        margin: -0.8rem 10px;
+
+    }
+
+    .questions__icon-title h3 {
+        width: 221px;
+        left: 5rem;
+        margin-top: 2.2rem
+    }
+
+    .questions__icon-content p {
+        height: 305px;
+        margin-bottom: -11rem;
+        left: 5rem;
+        top: -5rem;
+        font-size: 14px;
+        padding-right: 5%;
+    }
+
+    .questions__icons {
+        left: 0;
+    }
+
+    .questions__icon-content p:nth-child(2) {
+        margin-bottom: -16rem;
+        top: -4rem;
+    }
+
+    .plus-element {
+        top: 25%;
+    }
+}
+
+
+
+
+
+
+
+
+
 
